# lunchmoney_compare

./: .gitignore  CLAUDE.md  README.md  comparison.py  index.html  monthlyprogress.ipynb  myLMdata.ipynb  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  test_comparison.py  vite.config.js
src/: main.js  style.css
