[tool.poetry]
name = "lunchmoney"
version = "0.1.0"
description = ""
authors = ["Michael Lynch <michael.lynch1@providence.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
