[project]
name = "lunchmoney"
version = "0.1.0"
description = ""
authors = [{name = "Mick Lynch", email = "mick.lynch@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.3",
    "matplotlib>=3.8.3",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
